Fix align problem

--- a/client-app/auditlog/auditlog.less
+++ b/client-app/auditlog/auditlog.less
@@ -189,41 +189,6 @@
 			border: 1px solid #DCDCDC;
 		}
 	}
-
-	.auditlog-table {
-		font-family: Roboto-Regular;
-		font-size: 14px;
-		color: #305091;
-		border: 1px solid #305091;
-
-		th {
-			vertical-align: top;
-			background: #305091;
-			color: white;
-			font-weight: normal;
-			font-size: 14px;
-			border: none;
-			border-right: 1px solid #D8E1F3;
-			max-width: 480px;
-			overflow: hidden;
-
-			&:last-child {
-				border-right: none;
-			}
-		}
-
-		td {
-			border: none;
-			border-right: 1px solid #D8E1F3;
-			line-height: 40px;
-			max-width: 480px;
-			overflow: hidden;
-
-			&:last-child {
-				border-right: none;
-			}
-		}
-	}
 }
 
 .nopage {
